# skyjoust

./: .markdownlint.json  Cargo.toml  Makefile  README.md
crates/skyjoust_stateright_validator/: Cargo.toml  README.md
crates/skyjoust_stateright_validator/examples/: serve_explorer.rs
crates/skyjoust_stateright_validator/spec/: skyjoust-state-graphs.yaml  validator_contract.yaml
crates/skyjoust_stateright_validator/src/: action_generation.rs  actions.rs  ceremonies.rs  ceremonies_tests.rs  ledgers.rs  lib.rs  model.rs  model_tests.rs  properties.rs  scoring.rs  serde_impls.rs  state.rs  state_helpers.rs  state_tests.rs  stateright_adapter.rs  trace.rs  transitions.rs  transitions_tests.rs
crates/skyjoust_stateright_validator/src/serde_impls/: actions.rs  enums.rs  state.rs
crates/skyjoust_stateright_validator/tests/: stateright_contract.rs  trace_snapshots.rs  validate_trace_cli.rs
crates/skyjoust_stateright_validator/tests/snapshots/: trace_snapshots__keep_breach_reward_commit_trace_matches_snapshot.snap  trace_snapshots__reward_commit_before_final_score_matches_failure_snapshot.snap  trace_snapshots__tournament_reward_commit_trace_matches_snapshot.snap
crates/skyjoust_stateright_validator/traces/: keep_breach_reward_commit.json  long_legal_trace.json  tournament_reward_commit.json
docs/: contents.md  developers-guide.md  development-plan.md  repository-layout.md  roadmap.md  skyjoust-event-reward-scoring.dot  skyjoust-match-lifecycle.dot  skyjoust-overview.dot  skyjoust-player-action.dot  skyjoust-product-requirements.md  skyjoust-state-graphs-README.md  (+4 more)
(+8 files in other folders)
